--- a/Front-end/src/app/pages/home/home.component.html
+++ b/Front-end/src/app/pages/home/home.component.html
@@ -19,6 +19,6 @@
   <div class="headline">
     <h1>Welcome to Hirehub</h1>
     <p>Your best app to find a job</p>
-    <button class="btn btn-primary" routerLink="register">join</button>
+    <button class="btn btn-primary" routerLink="register">join now</button>
   </div>
 </div>
